--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -40,54 +40,53 @@
 }
 
 .about__description {
-    padding: 0.4rem 0 0;
+    padding: 0 4rem 0 0;
     margin-bottom: var(--mb-2-5);
 }
 
 /*=============== BREAKPOINTS ===============*/
 /* For large devices */
 @media screen and (max-width: 992px) {
-    .container {
-      margin-left: var(--mb-1-5);
-      margin-right: var(--mb-1-5);
+    .about__container {
+        grid-template-columns: 1fr;
+        row-gap: 2.5rem;
     }
-  
-    .button {
-      padding: 1rem 1.75rem;
+
+    .about__img{
+        width: 220px;
     }
-  
-    .button__icon {
-      width: 22px;
-      height: 22px;
+
+    .about__box {
+        padding: 0.75rem 0.5rem;
     }
-  }
-  
-  /* For medium devices */
-  @media screen and (max-width: 768px) {
-    body {
-      margin: 0 0 var(--header-height) 0;
+
+    .about__data {
+        text-align: center;
     }
-  
-    .section {
-      padding: 2rem 0 4rem;
+
+    .about__info {
+        justify-content: center;
     }
-  
-    .section__subtitle {
-      margin-bottom: var(--mb-3);
+
+    .about__description {
+        padding: 0 5rem;
+        margin-bottom: 2rem;
     }
   }
   
   @media screen and (max-width: 576px) {
-  }
-  
-  /* For small devices */
-  @media screen and (max-width: 350px) {
-    :root {
-      --big-font-size: 2.25rem;
+    .about__info {
+        grid-template-columns: repeat(3, 1fr);
     }
+
+    .about__description {
+        padding: 0;
+    }
+}
   
-    .container {
-      margin-left: var(--mb-1);
-      margin-right: var(--mb-1);
+  /* For small devices */   
+  @media screen and (max-width: 350px) {
+    .about__info {
+        grid-template-columns: repeat(2, 1fr);
     }
   }
