--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -92,5 +92,14 @@
     position: absolute;
     top: -0.75rem;
     left: 1.2rem;
-    font-size: var(--small-font-size);
+    font-size: var(--smaller-font-size);
+    padding: 0.25rem;
+    background-color: var(--body-color);
+    z-index: 10;
 }
+
+.contact__form-area{
+    height: 11rem;
+}
+
+
