--- a/src/components/qualification/qualification.css
+++ b/src/components/qualification/qualification.css
@@ -92,7 +92,7 @@
   /* For medium devices */
   @media screen and (max-width: 768px) {
     .qualification__container {
-        margin-left: var(--mb-1);
+        margin-left: var(--mb-1-5);
         margin-right: var(--mb-1-5);
     }
 }
