--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -81,6 +81,7 @@
     width: 100%;
     height: 100%;
     border: 2px solid rgba(0, 0, 0, 0.3);
+    background-color: #000;
     color: var(--text-color);
     outline: none;
     border-radius: 0.75rem;
